--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -16,7 +16,7 @@
 
   .form-group {
     text-align: center;
-    padding-left:20px;
+    padding-left:15px;
   }
 
   .form-horizontal {
@@ -34,13 +34,29 @@
   }
 
   .control-label {
-    padding-right:10px;
+    padding-right:8px;
   }
 
   #user_industry_id {
     width:360px;
     padding-left:10px;
   }
+
+  .btn-signup {
+    height:60px;
+    font-size:16pt;
+  }
+
+  .fb-btn {
+    height:60px;
+    font-size:16pt;
+    padding-top:10px;
+    .fa-facebook-square{font-size: 25px; padding-right:5px;}
+  }
+
+
+
+  .separator {margin-left: 20%;}
 }
 
 
