--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
         <div class="col-sm-6 col-sm-offset-2">
-            <%= render "users/shared/links" %>
+            <%= render "devise/shared/links" %>
         </div>
     </div>
     <% end %>
