--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <section class="col-md-8 col-md-offset-2 reg-form panel panel-default text-center">
+    <div class="col-md-8 col-md-offset-2 reg-form panel panel-default text-center">
       <h4 class="text-center">Please Sign Up</h4>
       <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal panel-content'}) do |f| %>
       <%= devise_error_messages! %>
@@ -33,17 +33,20 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-6">
-          <%= f.submit "Sign up", class: "btn btn-primary" %>
+          <%= f.submit "Sign up", class: "btn btn-success btn-signup col-sm-11 col-xs-11 col-sm-offset-2 text-center" %>
+           <div class="text-center separator">-- OR --</div>
+        </div>
+
+        <div class="col-sm-offset-2 col-sm-6">
+          <%= link_to(user_omniauth_authorize_path(:facebook), class: "btn btn-primary fb-btn col-sm-11 col-xs-11 col-sm-offset-2 text-center" ) do %>
+            <i class="fa fa-facebook-square"></i><span>Sign in with Facebook</span>
+          <%end%>
         </div>
       </div>
-      <div>or </div>
-      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-       <a href="/auth/facebook" class="btn-facebook">
-          <i class="fa fa-facebook fa-lg"></i><strong>Log in</strong> with <strong>Facebook</strong>
-        </a>
+
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-6">
-          <%= render "devise/shared/links" %>
+          <span>Already a member?</span> <%= render "devise/shared/links" %>
         </div>
       </div>
       <% end %>
