--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -6,8 +6,8 @@
   margin-top:10px;
 }*/
 .user-cover {
-  background-color:#3B736C;
-  background:rgba(59, 115, 108, 0.54);
+  background-color:#315954;
+  //background:rgba(59, 115, 108, 0.54);
   min-height: 300px;
   //background-image: url("dusty-sky.JPG");
   background-position: center center;
