--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -12,8 +12,8 @@
         <div id="meetup-card-<%=  %>" class="meetup-card col-lg-3 col-md-2 col-sm-12 col-xs-12">
           <div class="card-top">
             <h4 class="text-center"> <%= meetup.name %> </h4>
-            <% if meetup.provider %>
-              <p class="text-center">by <strong><%= meetup.provider%></strong></p>
+            <% if meetup.course.provider %>
+              <p class="text-center">by <strong><%= meetup.course.provider%></strong></p>
             <%end%>
           </div>
           <div class="card-bottom text-center">
@@ -35,15 +35,13 @@
 
       </div><!-- study meetups section ends here -->
       <nav>
-    <div class="pagination">
-       <%= will_paginate @meetups %>
-    </div>
-
-</nav>
+        <div class="pagination">
+           <%= will_paginate @meetups %>
+        </div>
+      </nav>
 
     </div>
   </div>
 </div>
-
 
 <%= link_to 'New Study meetup', new_meetup_path %>
