--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -40,7 +40,7 @@
 }
 
 .course-header {
-  height:300px;
+  min-height:300px;
   background:#464646;
 
   h1 {
@@ -48,10 +48,34 @@
     text-align:center;
     font-weight:400px;
     margin-top:100px;
+    padding:10px;
+  }
+  p {color:#ddd;}
+}
+
+.course-wrapper {
+  margin-top: 20px;
+}
+
+.header-wrapper {
+  border-radius:5px;
+  .stats {
+    background-color: green;
+    min-height: 300px;
+    padding:10px;
+    padding-top: 60px;
+    padding-top: 60px;
+
+    ul li {
+      font-size: 20pt;
+      padding-top:10px;
+      color:#fff;
+    }
+
   }
 }
 
-.discussion-board {
+.reviews-board {
   margin-top:20px;
   background-color:#fff;
   border:5px;
