--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,25 +7,60 @@
     </div>
     <div class="stats col-md-4">
       <ul>
-        <li>Overall rating 234 </li>
-        <li>Course Reviews 234 </li>
+        <li>Course Reviews <%= @course.course_reviews.count%></li>
         <li>Recommendations 220 </li>
       </ul>
     </div>
   </div>
   <div class="row">
-
-    <div class="col-lg-8">
-      <div class="reviews-board row">
+    <div class="col-lg-8 reviews-board">
+      <div class=" row">
         <h1 class="col-md-9">Reviews</h1>
         <div class="col-md-3 pull-right">
           <%=link_to "Add review", new_course_course_review_path(@course),
               class: "btn btn-primary"%>
         </div>
       </div>
+      <hr>
+      <% @course.course_reviews.each do |post| %>
+      <div class="posts-area col-md-12" id="course-post-<%=post.id%>">
+        <div class="post-wrapper ">
+          <div class="post-header  row">
+            <h3>Experience stars: <%= rating_for @course, "experience" %>
+        </h3>
+            <div class="image-for-poster col-md-2  text-center"><%=link_to (image_tag post.user.avatar.url(:thumb), class: "img-circle ", size:'50x50'), user_path(post.user) %>
+            </div>
+            <div class="col-md-8 col-sm-12 col-xs-12">
+              <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
+              <div class="time">
+                <%= timeago_tag post.created_at, :nojs => true, :limit => 30.days.ago %>
+              </div>
+            </div>
+            <%if post.user == current_user %>
+              <div class="col-md-2 col-sm-4 col-xs-6 pull-right post-actions" >
+                <%=link_to "", edit_course_course_review_path(post.course, post),remote: true,  class: "fa fa-pencil fa-fw" %>
+                <%=link_to "", course_course_review_path(post.course, post.id), remote: true,  method: :delete, data: {confirm: "Are you sure u want to delete this post?"}, class: "fa fa-times" %>
+              </div>
+            <%end%>
+          </div>
+          <div class="post-body panel-body">
+            <h1><%= post.title %></h1><br>
+            <p><%= post.description %></p>
+          </div>
+          <!-- Comments start here-->
+
+          <!-- End of comments-->
+
+        </div><!-- Post body ends here-->
+      </div>
+
+    <%end%>
+
+
+
     </div>
     <div class="col-lg-4">
-      <div class="course-meetup-suggestion">
+      <div class="course-course-suggestion">
         suggestions
       </div>
     </div>
