* Add recommendation table
* clean up views

--- a/app/views/course_reviews/_form.html.erb
+++ b/app/views/course_reviews/_form.html.erb
@@ -13,7 +13,8 @@
       </div>
     <% end %>
     <br>
-
+    rate  : <%= rating_for @course, "experience" %>
+    <hr>
     <div class="field">
       <%= f.text_field :title %>
     </div>
