--- a/app/views/layouts/_home_nav.html.erb
+++ b/app/views/layouts/_home_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right main-nav-link">
         <li><a href="#">Getting Started</a></li>
-        <li><a href="/courses/4">Courses</a></li>
+        <li><a href="/courses">Courses</a></li>
         <li><a href="/organizations">Organizations</a></li>
         <li><a href="/users">Users</a></li>
         <li><%= link_to "Sign In", new_user_session_path, class: 'btn btn-sm btn-default' %></li>
