--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,10 @@
         <%= f.collection_select(:industry_id, Industry.all,
           :id, :name, required: true,  class: "pull-right col-md-4 col-sm-6") %>
       </div>
+      <div class="form-group">
+        <%= f.label :industry, class: "col-sm-3 col-xs-12 control-label" %>
+        <%= f.collection_select(:industry_id, Industry.all, :id, :name, {include_blank: "-- Please select your industry or major --", hide_label: true}, required: true, class: "col-sm-6 text-center") %>
+      </div>
 
       <div class="form-group">
         <%= f.label :password, class: 'col-sm-2 control-label' %>
@@ -52,13 +56,6 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <%= f.label :current_password, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-6">
-          <%= f.password_field :current_password, autocomplete: "off",
-            class: 'form-control',placeholder: "required to update" %>
-        </div>
-      </div>
 
       <h4 class=""> Change Your profile Info </h4>
 
