--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,121 +1,77 @@
 
 <div class="container">
-  <div class="row reg-form">
-    <section class="col-md-8 col-md-offset-2">
-      <h4 class="text-center"> Change Your Account Information </h4>
-       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
-      <%= devise_error_messages! %>
-      <div class="form-group">
-        <div class""><%= f.label "Change Avatar" %>
-          <div class="file"><%= f.file_field :avatar %></div>
-        </div>
-      </div>
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1 reg-form panel panel-default text-center">
+      <h4 class="text-center">Edit your information below</h4>
+      <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal panel-content' }) do |f| %>
 
       <div class="form-group">
-        <%= f.label :first_name, class: 'col-sm-2 control-label'  %>
+        <%= f.label :full_name, class: "col-sm-3 control-label" %>
         <div class="col-sm-6">
-          <%= f.text_field :first_name, class: 'form-control'  %>
+          <%= f.text_field :full_name, hide_label:true,required: true, class: "form-control" %>
         </div>
       </div>
 
-      <div class="form-group">
-        <%= f.label :last_name, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_field :last_name, class: 'form-control'  %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :email, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.email_field :email, class: 'form-control'  %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.collection_select(:industry_id, Industry.all,
-          :id, :name, required: true,  class: "pull-right col-md-4 col-sm-6") %>
-      </div>
       <div class="form-group">
         <%= f.label :industry, class: "col-sm-3 col-xs-12 control-label" %>
         <%= f.collection_select(:industry_id, Industry.all, :id, :name, {include_blank: "-- Please select your industry or major --", hide_label: true}, required: true, class: "col-sm-6 text-center") %>
       </div>
 
       <div class="form-group">
-        <%= f.label :password, class: 'col-sm-2 control-label' %>
+        <%= f.label :email, class: "col-sm-3 control-label" %>
+        <div class="col-sm-6 col-xs-12">
+          <%= f.email_field :email,hide_label: true, required: true, class: "form-control"%>
+        </div>
+      </div>
+
+      <h4 class=""> About </h4>
+      <div class="form-group">
+        <%= f.label :about, "status", class: 'col-sm-3 control-label'  %>
+        <div class="col-sm-6 col-xs-12">
+          <%= f.text_area :about,hide_label: true, class: 'form-control'  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :interests, class: 'col-sm-3 control-label'  %>
+        <div class="col-sm-6 col-xs-12">
+          <%= f.text_area :interests, hide_label: true, class: 'form-control'  %>
+        </div>
+      </div>
+
+      <h4 class=""> Want to change password? </h4>
+       <div class="form-group">
+        <%= f.label :password, class: 'col-sm-3 control-label' %>
         <div class="col-sm-6">
-          <%= f.password_field :password, autocomplete: "off",
+          <%= f.password_field :password, hide_label:true,  autocomplete: "off",
               class: 'form-control', placeholder: "only if you want to change password"  %>
         </div>
       </div>
 
       <div class="form-group">
-        <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
+        <%= f.label :password_confirmation, "Repeat Password", class: 'col-sm-3 control-label' %>
         <div class="col-sm-6">
-            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
-        </div>
-      </div>
-
-
-      <h4 class=""> Change Your profile Info </h4>
-
-      <div class="form-group">
-        <%= f.label :about, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :about, class: 'form-control'  %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :interests, class: 'form-control'  %>
-        </div>
-      </div>
-      <h4 class=""> Professional Experience </h4>
-      <div class="form-group">
-        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :interests, class: 'form-control'  %>
-        </div>
-      </div>
-      <div class="form-group">
-        <%= f.label :about, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :about, class: 'form-control'  %>
-        </div>
-      </div>
-
-
-      <h4 class=""> Education </h4>
-      <div class="form-group">
-        <%= f.label :about, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :about, class: 'form-control'  %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
-          <%= f.text_area :interests, class: 'form-control'  %>
+            <%= f.password_field :password_confirmation, hide_label: true,  autocomplete: "off", class: 'form-control'  %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-6">
-          <%= f.submit "Update", class: "btn btn-primary" %>
+          <%= f.submit "Update", class: "btn btn-success btn-signup col-sm-9 col-xs-9 col-sm-offset-2 text-center" %>
         </div>
       </div>
 
       <% end %>
+
       <div class="row actions">
         <div class="col-md-6 col-md-offset-2">
           <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default btn-xs' %></p>
           <%= link_to "Back", :back %>
         </div>
       </div>
-    </section>
+
+    </div>
   </div>
 </div>
+
 
