Add ability to add a course from courses index page

--- a/app/views/course_reviews/_form.html.erb
+++ b/app/views/course_reviews/_form.html.erb
@@ -19,7 +19,7 @@
       <%= f.text_field :title %>
     </div>
     <div class="field">
-      <%= f.text_area :description %>
+      <%= f.text_area :description, class: 'ckeditor' %>
     </div>
     <div class="field">
 
