--- a/app/views/user_posts/_comments.html.erb
+++ b/app/views/user_posts/_comments.html.erb
@@ -8,7 +8,7 @@
           <div class="pull-left block commenter-image circle">
             <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
           </div>
-          <span><%=link_to "#{comment.user.full_name}", user_path(user), class: "row" %></span>
+          <span><%=link_to "#{comment.user.full_name}", user_path(comment.user), class: "row" %></span>
           </div>
           <% if comment.user == current_user %>
             <div class="col-md-2 col-sm-6 col-xs-12 text-center comment-actions">
@@ -28,4 +28,3 @@
     <%end%>
   </ul>
 </div>
-
