--- a/app/views/users/_side_tab_menu.html.erb
+++ b/app/views/users/_side_tab_menu.html.erb
@@ -1,11 +1,11 @@
 <div class="list-group">
 <a href="#" class="list-group-item active text-center">
-    <h4 class="fa fa-book"></h4><br/>Posts
+    <h4 class="fa fa-book"></h4><br/>Activity Feed
   </a>
   <a href="#" class="list-group-item text-center">
-    <h4 class="fa fa-book"></h4><br/>Courses
+    <h4 class="fa fa-book"></h4><br/>My Posts
   </a>
-  <a href="#" class="list-group-item text-center">
+  <!-- <a href="#" class="list-group-item text-center">
     <h4  class="fa fa-users"></h4><br/>Teams
   </a>
   <a href="#" class="list-group-item text-center">
@@ -16,5 +16,5 @@
   </a>
   <a href="#" class="list-group-item text-center">
     <h4 class="glyphicon glyphicon-credit-card"></h4><br/>About
-  </a>
+  </a> -->
 </div>
