--- a/app/views/post_comments/_count_comments.html.erb
+++ b/app/views/post_comments/_count_comments.html.erb
@@ -1,3 +1,3 @@
 
-  <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%=post.post_comments.count%> comments</a>
-
+  <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>">
+  <%=post.post_comments.count%> comments</a>
