add partial to display meetup members

--- a/app/assets/stylesheets/meetups.css.scss
+++ b/app/assets/stylesheets/meetups.css.scss
@@ -50,7 +50,7 @@
 }
 
 .study-meetup-header {
-  min-height:600px;
+  min-height:400px;
   background-position: cover;
   padding:0px;
   margin-top: 20px;
@@ -62,19 +62,18 @@
     font-size: 50px;
     font-weight: 400px;
     color: #fff;
-    margin-top: 0px;
+    top: 100px;
     padding-top: 20px;
   }
 
   .meetup-banner-wrapper {
      position:relative;
      min-height:270px;
-
   }
 
   .meetup-banner {
     background:green;
-    min-height: 340px;
+    min-height: 300px;
     margin-top:-20px;
 
     .meetup-actions {
@@ -109,6 +108,7 @@
   .meetup-headline {
     margin-left:20px;
     margin-top:0px;
+    padding:60px 0px 0px;
     text-align:center;
   }
 }
@@ -139,4 +139,10 @@
       min-height:400px;
     }
   }
+}
+
+.meetup-members {
+  margin:0px 5px 0px 5px;
+  border:1px solid #ddd;
+
 }
