--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,10 @@
-<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+  <div class="row" style="background:maroon;height:200px; color:#fff;">
+      <div class="container">
+        <h1 class="headline"><%= @group.name %></h1>
+      </div>
+    </div>
+</div>
+<div class="container">
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+</div>
