--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -58,7 +58,7 @@
       </div>
       <h1> You Don't Have To Study Alone Anymore</h1>
       <p><strong>Create a team of enthusiastic learners like you based on the course that you are taking, collaborate on projects and enhence your knowledge</strong></p>
-      <a href="/teams" class="btn btn-default btn-lg"> Find Out More </a>
+      <a href="/groups" class="btn btn-default btn-lg"> Find Out More </a>
     </div>
   </div>
 </div>
@@ -78,5 +78,3 @@
   </div>
  </div>
 </div>
-
-
