--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,17 +1,42 @@
-<%= form_for(@group) do |f| %>
-  <% if @group.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@group.errors.count, "error") %> prohibited this group from being saved:</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1 reg-form panel panel-default text-center">
+      <h4 class="text-center">Create a new study group</h4>
+      <%= bootstrap_form_for(@group, html: {class: 'form-horizontal panel-content'}) do |f| %>
 
-      <ul>
-      <% @group.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <div class="form-group">
+        <%= f.label :name, class: "col-sm-3 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :name, hide_label:true,required: true, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :description, class: "col-sm-3 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_area :description, hide_label:true,required: true, rows: 6,  class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :organization, class: "col-sm-3 control-label" %>
+        <div class="col-sm-6">
+          <%= f.text_field :organization, hide_label:true, class: "form-control" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :industry, class: "col-sm-3 col-xs-12 control-label" %>
+        <%= f.collection_select(:industry_id, Industry.all, :id, :name, {include_blank: "-- Please select your industry or major --", hide_label: true}, required: true, class: "col-sm-6 text-center") %>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-6">
+          <%= f.submit "Create Group", class: "btn btn-success btn-signup col-sm-9 col-xs-11 col-sm-offset-2 text-center" %>
+        </div>
+      </div>
+
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
   </div>
-<% end %>
+</div>
