--- a/app/views/layouts/_logged_in_nav.html.erb
+++ b/app/views/layouts/_logged_in_nav.html.erb
@@ -22,7 +22,7 @@
             <ul class="dropdown-menu" role="menu">
               <li><a href="/profile" data-method="get"> View Profile</a></li>
               <li class="divider"></li>
-              <li><a href="users/edit"> Edit Profile</a></li>
+              <li><a href="/users/edit"> Edit Profile</a></li>
               <li class="divider"></li>
               <li><%= link_to " Logout", destroy_user_session_path, :method => :delete %></li>
             </ul>
