--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -1,20 +1,21 @@
-<h1 class="text-center"><%= Meetup.all.count%> Course user meetups</h1>
-
+<div class="top-header top-header-users"style="background-color:#57a4d8;">
+  <div class="hero-headline">
+    <h1> Find Groups and share knowledge with other learners </h1>
+  </div>
+</div>
+<%= render partial: 'users/search_bar'%>
 <div class="container">
   <div class ="study-meetups-wrapper row">
-    <div class="col-md-2 study-meetup-search">
-      <h>Search</head>
-    </div>
 
-    <div class="study-meetups-section col-md-10">
+    <div class="study-meetups-section col-md-10 col-md-offset-1 text-center">
       <div class="row all-study-meetups">
       <% @meetups.each do |meetup| %>
         <div id="meetup-card-<%=  %>" class="meetup-card col-lg-3 col-md-2 col-sm-12 col-xs-12">
           <div class="card-top">
-            <h4 class="text-center"> <%= meetup.name %> </h4>
-            <% if meetup.course.provider %>
-              <p class="text-center">by <strong><%= meetup.course.provider%></strong></p>
-            <%end%>
+            <p class="text-center hero-headline"> <%= meetup.name %> </p>
+
+              <p class="text-center">by<%= meetup.course.organization.name %></p>
+
           </div>
           <div class="card-bottom text-center">
             <div class="actions meetup-members">
