style meetups index page

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,6 @@
+//palettes options
+//option 1 #585858 #118C4E#C1E1A6 #FF9009
+
 body {
   //background-color:#EBEBEB;
   font-family: Georgia,Times,"Times New Roman",serif;
@@ -44,3 +47,4 @@ a:visited {
   min-height: 40px;
   min-width: 100px;
 }
+span {text-decoration: none;text-overflow: hidden;}
