--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -50,6 +50,12 @@
     // letter-spacing: -1px;
   }
 }
+.following-users{
+  min-height: 200px;
+  background-color:#fff;
+  h1 {color:#2dbe60}
+}
+//users search bar styles
 .search-bar {
   .input-group {
     height: 60px;
