--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,17 +1,22 @@
+
+  <div class="top-header following-users">
+    <div class="hero-headline ">
+      <h1 class="text-center">  Following <%= @user.following_users.count %> users</h1>
+    </div>
+  </div>
 <div class ="container">
-  <h1> <%= @user.following_users.count %> Following</h1>
-  <hr>
   <% @following.each do |user| %>
-    <div class="row">
-      <div class"user-avatar"><%= image_tag user.avatar.url(:thumb), :class => "img-circle col-md-2 col-sm-4 col-xs-6"%></div>
-      <ul class="col-md-3 col-sm-3 col-xs-6">
-        <li><%= user.email %></li>
-        <%= link_to 'view', user, class: "btn btn-primary btn-lg" %>
-        <div id="<%= user.id %>-follow-form" class="follow-form">
-          <%= render partial: 'follows/follow_form', locals: { user: user } %>
-        </div>
+  <div class="card">
+    <div class="col-md-3 col-sm-3 col-xs-12 text-center card">
+      <%= image_tag user.avatar.url(:thumb), :class => "user-avatar img-circle "%>
+      <h4 class=""><%=link_to user.full_name, user_path(user) %></h4>
+      <p><%= user.industry.name if user.industry%></p>
+      <ul class="actions list-inline">
+        <li id="<%= user.id %>-follow-form" class="follow-form">
+          <%= render partial: 'follows/follow_form', locals: { user: user } if current_user %>
+        </li>
       </ul>
     </div>
-    <hr>
-  <% end %>
+  </div>
+  <%end%>
 </div>
